# fastapi_edu

./: items_router.py  main.py  pyproject.toml
users/: crud.py  schemas.py  user_router.py
